# digital_voting

./: attendance.py  digital_voting.db  get_facial_encoding.py  pyproject.toml  test.py  vote.py  voted.csv
app/: main.py  models.py
app/candidate/: candidate_route.py
app/voter/: voter_route.py
digital_voting/: architecture.py  credentials.csv  main.py
digital_voting/candidate/: candidate_route.py  schemas.py
digital_voting/voter/: voter_route.py
