[tool.poetry]
name = "[Digital_Voting_PPython]"
version = "0.1.0"
description = "College final Year Project Based On BlockChain Technology"
authors = ["Dipesh Regmi <regdipesh1113@gmail.com>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
